index.html and recipes/garlicbread.html

--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>The best Italian food you'll ever eat!</h1>
 
-    <img src="https://www.pinclipart.com/picdir/big/411-4114211_chef-drawing-vintage-chef-black-white-png-clipart.png" alt="picture of a chef">
+    <img class="intro" src="./recipes/Food Pics/kisspng-chef-vector-graphics-coccd766de41625.7656074015569690699343.png" alt="picture of a chef">
 
     <p>Got some good recipes for you guys. Here's what I got:</p>
 
-    <ul>
+    <ul class="listing">
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
         <li><a href="./recipes/oldfashioned.html">Old Fashioned</a></li>
         <li><a href="./recipes/garlicbread.html">Garlic Bread</a></li>
