--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Best Lasagna Recipe</h1>
+    <h1>The Absolute Best Lasagna Recipe</h1>
 
-    <img src="https://www.thespruceeats.com/thmb/E1v3koUrFM5HhL6Yj8HKNuSmLoY=/940x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/white-and-red-sauce-lasagna-recipe-995925-hero-1-fb2c2142b39042069f0c50310047256d.jpg" alt="Picture of Lasanga">
+    <img class="lasagna" src="./Food Pics/Screenshot from 2022-04-24 12-30-48.png" alt="Picture of Lasanga">
 
-    <h4>The best Lasagna you'll ever eat!</h4>
+    <h4>Seriously, this will be best Lasagna you'll ever eat!</h4>
 
     <p>This is a recipe that's been passed down in my family for generations. I'll keep it short and sweet for you. You only really need a couple ingredients.</p>
 
-    <ul>
+    <ul class="listing">
         <li>2 cans of tomato sauce</li>
         <li>3 tbsp of oregano</li>
         <li>1 lb of ground beef</li>
@@ -28,9 +29,9 @@
         <li>10 oz bag of fresh mozerella cheese</li>
     </ul>
 
-    <p>The prep is simple. Just follow the directions below:</p>
+    <p class="simple">The prep is pretty simple. If you've never cooked lasagna before that's okay. Just follow the directions below:</p>
 
-    <ol>
+    <ol class="listing">
         <li>Brown the meat in a pan or skillet, add onion or onion powder and diced green pepper.</li>
         <li>Begin boiling lasagna noodles</li>
         <li>Add both cans of tomato sauce, stir until fully mixed.</li>
