--- a/recipes/oldfashioned.html
+++ b/recipes/oldfashioned.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Document</title>
 </head>
 <body>
     <h1>Best Old Fashioned Recipe</h1>
 
-    <img src="https://images.immediate.co.uk/production/volatile/sites/2/2020/02/Cocktail-3-bb1c21e.jpg?quality=90&webp=true&crop=242px,317px,1907px,820px&resize=300,272" alt="Picture of old fashioned drink">
+    <img class="drank" src="./Food Pics/Screenshot from 2022-04-24 12-31-06.png" alt="Picture of old fashioned drink">
 
 
     <h4>The best old fashioned you'll ever drink!</h4>
 
     <p>This is a recipe that's been my favorite after a hard week's work where I'm wanting to just relax, or show off for guests.</p>
 
-    <ul>
+    <ul class="listing">
         <li>4 oz of your favorite bourbon or rye. Personally I recommend Bulliet or Buffalo Trace</li>
         <li>1/4 tsp aromatic bitters</li>
         <li>1 sugar cube</li>
@@ -26,7 +27,7 @@
 
     <p>The prep is simple. Just follow the directions below:</p>
 
-    <ol>
+    <ol class="listing">
         <li>Place the sugar cube into the bottom of the glass and drip the aromatic bitters on top of it.</li>
         <li>Begin gently mashing the sugar cube into the bottom of the glass.</li>
         <li>Pour in your whisky of choice.</li>
